@@ -1,5 +1,5 @@
 /*
- * "$Id: emit.c,v 1.23.2.10 2003/06/02 20:24:19 mike Exp $"
+ * "$Id: emit.c,v 1.23.2.11 2003/06/07 16:35:54 mike Exp $"
  *
  *   PPD code emission routines for the Common UNIX Printing System (CUPS).
  *
@@ -607,10 +607,10 @@ ppdEmitJCL(ppd_file_t *ppd,		/* I - PPD file record */
             job_id, user, temp);
   }
   else
-    fputs(ppd->jcl_begin, stdout);
+    fputs(ppd->jcl_begin, fp);
 
-  ppdEmit(ppd, stdout, PPD_ORDER_JCL);
-  fputs(ppd->jcl_ps, stdout);
+  ppdEmit(ppd, fp, PPD_ORDER_JCL);
+  fputs(ppd->jcl_ps, fp);
 
   return (0);
 }
@@ -709,5 +709,5 @@ ppd_sort(ppd_choice_t **c1,	/* I - First choice */
 
 
 /*
- * End of "$Id: emit.c,v 1.23.2.10 2003/06/02 20:24:19 mike Exp $".
+ * End of "$Id: emit.c,v 1.23.2.11 2003/06/07 16:35:54 mike Exp $".
  */
